--- a/camronwilson-vue/package.json
+++ b/camronwilson-vue/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.75.0",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
+    "vue-scrollto": "^2.20.0",
     "vue-tsc": "^2.0.11"
   }
 }
