--- a/camronwilson-vue/package.json
+++ b/camronwilson-vue/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "axios": "^1.7.5",
     "vue": "^3.4.24",
     "vue-router": "^4.3.0",
     "vuetify": "^3.5.16"
@@ -22,7 +23,6 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.1.2",
-    "pdfvuer": "^1.0.1",
     "sass": "^1.75.0",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
